terminei os exercícios de css

--- a/sistema-loja/add-produto.html
+++ b/sistema-loja/add-produto.html
@@ -6,19 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Adicionar Produto</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div>
-        <p>Nome da lojinha</p>
-    </div>
+    <header>
+        <p class="logo"> restaurante molim</p>
+        <div class="social-media">
+            <img  class = "img" src="https://image.flaticon.com/icons/png/512/25/25305.png" />
+            <img class = "img" src="https://image.flaticon.com/icons/png/512/25/25425.png" />
+            <img class = "img" src="https://image.flaticon.com/icons/png/512/8/8800.png" />
+        </div>
 
-    <div>
-        <a href="index.html">Página Inicial</a>
-        <a href="ctrl-estoque.html">Controle de Estoque</a>
-        <a href="add-produto.html">Adicionar Produto</a>
-        <a href="funcionarios.html">Funcionários</a>
-    </div>
+
+    </header>
+    <ul>
+        <li><a href="vendas.html">vendas</a></li>
+        <li><a href="historico-de-vendas.html">historico de vendas</a></li>
+        <li><a href="index.html">Página Inicial</a></li>
+        <li><a href="ctrl-estoque.html">Controle de Estoque</a></li>
+        <li> <a href="funcionarios.html">Funcionários</a></li>
+    </ul>
 
     <h2>Adicionar Produto</h2>
     <form action="">
@@ -51,6 +59,22 @@
         </div>
 
     </form>
+
+    <footer>
+
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+
+        <p>direitos reservados</p>
+
+
+    </footer>
 
 </body>
 
