--- a/sistema-loja/index.html
+++ b/sistema-loja/index.html
@@ -1,37 +1,81 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Nome da Loja</title>
+    <title>molin</title>
+    <link rel="stylesheet" href="style.css">
 
 </head>
+
 <body>
-    <div>
-        <h1>Bem-vind@ ao <em>nome da loja</em>!</h1>
-        <p>Frase de chamada para sua loja</p>
-    </div>
+    <header>
+        <p class="logo"> restaurante molim</p>
+        <div class="social-media">
+            <img  class = "img" src="https://image.flaticon.com/icons/png/512/25/25305.png" />
+            <img  class = "img" src="https://image.flaticon.com/icons/png/512/25/25425.png" />
+            <img class = "img"  src="https://image.flaticon.com/icons/png/512/8/8800.png" />
 
-    <div>
-        <a href="index.html">Página Inicial</a>
-        <a href="ctrl-estoque.html">Controle de Estoque</a>
-        <a href="add-produto.html">Adicionar Produto</a>
-        <a href="funcionarios.html">Funcionários</a>
-    </div>
-
-    <div>
-        <!-- ADICIONAR INFORMAÇOES SOBRE SUA LOJINHA -->
-    </div>
-
-    <div>
-        <p>Siga-nos nas redes sociais!</p>
-
-        <div>
-            <img src="https://image.flaticon.com/icons/png/512/25/25305.png"/>
-            <img src="https://image.flaticon.com/icons/png/512/25/25425.png"/>
-            <img src="https://image.flaticon.com/icons/png/512/8/8800.png"/>
         </div>
-    </div>
+    </header>
+
+    <ul>
+        <li><a href="vendas.html">vendas</a></li>
+        <li><a href="historico-de-vendas.html">historico de vendas</a></li>
+        <li><a href="ctrl-estoque.html">Controle de Estoque</a></li>
+        <li> <a href="add-produto.html">Adicionar Produto</a></li>
+        <li> <a href="funcionarios.html">Funcionários</a></li>
+    </ul>
+
+
+    <table>
+        <th>espeto corrido </th>
+        <th class="buffet">buffet livre</th>
+        <th class="sobremesas">sobremesas</th>
+        <th class="sobremesas">marmitex</th>
+
+        <tr>
+            <td><img class = "espeto" src="img/espeto_corrido.jpg"/></td>
+            <td><img class = "buffet" src="img/buffet.jpg"/></td>
+            <td><img class = "sobremesas" src="img/sobremesa.jpg"/></td>
+            
+        </tr>
+        
+
+
+
+
+
+    </table>
+
+
+
+
+    <footer>
+
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+
+        <p>direitos reservados</p>
+
+
+    </footer>
 </body>
+
 </html>
