--- a/sistema-loja/vendas.html
+++ b/sistema-loja/vendas.html
@@ -1,47 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Funcionários</title>
+    <title>Nome da Loja</title>
     <link rel="stylesheet" href="style.css">
-</head>
 
+</head>
 <body>
     <header>
-        <p class="logo"> restaurante molim</p>
-        <div class="social-media">
-            <img class = "img" src="https://image.flaticon.com/icons/png/512/25/25305.png" />
-            <img class = "img" src="https://image.flaticon.com/icons/png/512/25/25425.png" />
-            <img class = "img" src="https://image.flaticon.com/icons/png/512/8/8800.png" />
+        <p class = "logo"> restaurante molim</p>
+        <div class = "social-media">
+            <img class = "img" src="https://image.flaticon.com/icons/png/512/25/25305.png"/>
+            <img  class = "img" src="https://image.flaticon.com/icons/png/512/25/25425.png"/>
+            <img class = "img"  src="https://image.flaticon.com/icons/png/512/8/8800.png"/>
         </div>
     </header>
+
     <ul>
-        <li><a href="vendas.html">vendas</a></li>
         <li><a href="historico-de-vendas.html">historico de vendas</a></li>
         <li><a href="index.html">Página Inicial</a></li>
         <li><a href="ctrl-estoque.html">Controle de Estoque</a></li>
         <li> <a href="add-produto.html">Adicionar Produto</a></li>
-    </ul>
-
-    <h2>Funcionários</h2>
-    <ul>
-        <li>matheus</li>
-        <li>de souza</li>
-        <li>dos santos</li>
-        <li>pato</li>
-        <li>galinha</li>
-        <li>marreco</li>
-        <li>papagaio</li>
-        <li>pokemon</li>
-
-
+        <li> <a href="funcionarios.html">Funcionários</a></li>
     </ul>
 
     <footer>
 
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
         <br>
         <br>
         <br>
@@ -54,5 +50,4 @@
 
     </footer>
 </body>
-
 </html>
