resolvi o problema da enumercaçao da lista

--- a/semana3/bugfixes/exercicio-bugfixes/home.html
+++ b/semana3/bugfixes/exercicio-bugfixes/home.html
@@ -18,9 +18,10 @@
                 em tornar a compra de <br>
                 roupas mais fácil </p>
             <ol>
-                <li> Ache os melhores descontos </li>
-                <li> Busque pelos seus gostos</li>
+                <li>1. Ache os melhores descontos </li>
+                <li>2 .Busque pelos seus gostos</li>
             </ol>
+
             <h3> Realize seus sonhos conosco</h3>
         </div>
 
@@ -29,7 +30,6 @@
             <a href="comprar.html"><button class="botao-amarelo" > COMPRAR </button></a>
         </div>
     </div>
-</body>
 </body>
 
 </html>
