--- a/semana3/bugfixes/exercicio-bugfixes/comprar.html
+++ b/semana3/bugfixes/exercicio-bugfixes/comprar.html
@@ -42,7 +42,7 @@
         </table>
     </div>
     <div>
-        <a href ="home.html" back-button"> VOLTAR </button></a>
+        <a href ="home.html" class ="back-button"> VOLTAR </button></a>
     </div>
 
 </body>
