--- a/semana3/bugfixes/exercicio-bugfixes/home.html
+++ b/semana3/bugfixes/exercicio-bugfixes/home.html
@@ -18,8 +18,8 @@
                 em tornar a compra de <br>
                 roupas mais fácil </p>
             <ol>
-                <li>1. Ache os melhores descontos </li>
-                <li>2 .Busque pelos seus gostos</li>
+                <li>Ache os melhores descontos </li>
+                <li>Busque pelos seus gostos</li>
             </ol>
 
             <h3> Realize seus sonhos conosco</h3>
