terminei a pag de certificados

--- a/semana3/portfolio/certificacoes.html
+++ b/semana3/portfolio/certificacoes.html
@@ -15,18 +15,23 @@
 
             <p class="certificados">certificados</p>
 
-            <ul>
-                <li class="links"><a href="certificacoes.html">certificações</li></a>
-                    <li class="links"><a href="projetos.html">projetos</li></a>
-                        <li class="links"><a href="habilidades.html">habilidades</li></a>
-                            <li class="links"><a href="contato.html">contato</li></a>
+            <ul class="lista_certificados">
+                <li class="links"><a href="projetos.html">projetos</li></a>
+                    <li class="links"><a href="habilidades.html">habilidades</li></a>
+                        <li class="links"><a href="contato.html">contato</li></a>
+                            <li class="links"><a href="index.html">home</li></a>
             </ul>
         </header>
         <main class="main_certificados">
-            <p class="ensino_medio">ensino médio completo na escola gonçalves dias</p>
-            <p class="cursos">estudando desenvolvimento web full stack na labenu</p>
-            <p class="superior">cursando desenvolvimento back-end na unopar</p>
-            <img src="img/foto_perfil.jpg">
+            <div class="ensino_1">
+                <p class="ensino_medio">ensino médio</p>
+                <img src="img/gonçalves.jpg">
+            </div>
+            <div class="ensino_2">
+                <p class="curso_programacao">curso de programação</p>
+                <a href="https://www.labenu.com.br/">
+                    <img class="labenu" src="img/labenu.png"></a>
+            </div>
         </main>
     </div>
 </body>
