--- a/semana3/portfolio/habilidades.html
+++ b/semana3/portfolio/habilidades.html
@@ -11,9 +11,11 @@
 <body>
     <p>em breve...</p>
     <ul>
-        <li>html</li>
-        <li>css</li>
-        <li>javascript</li>
+        <li class="links"><a href="certificacoes.html">certificações</li></a>
+            <li>html</li>
+            <li>css</li>
+            <li>javascript</li>
+
     </ul>
 </body>
 
