--- a/semana3/portfolio/index.html
+++ b/semana3/portfolio/index.html
@@ -11,17 +11,17 @@
 <div class="container">
     <header>
         <p class="nome"> matheus de souza</p>
-        <ul>
+        <ul class="ul-home">
             <li class="links"><a href="certificacoes.html">certificações</li></a>
                 <li class="links"><a href="projetos.html">projetos</li></a>
                     <li class="links"><a href="habilidades.html">habilidades</li></a>
                         <li class="links"><a href="contato.html">contato</li></a>
         </ul>
     </header>
-    <main>
-        <p class="apresentacao">Olá sou um jovem desenvolvedor web que sempre busca melhorar as habilidades,<br>sempre me expondo a novos desafios todos os dias em busca do crescimento.<br> tenho 21 anos e programo a pouco tempo mas tenho cede<br> em melhorar minhas habilidades.
+    <main class="home">
+        <p class="apresentacao">Olá sou um jovem desenvolvedor web que sempre busca melhorar as habilidades,<br>sempre me expondo a novos desafios todos os dias em busca do crescimento.<br> tenho 21 anos e programo a pouco tempo mas tenho<br> cede em melhorar minhas habilidades.
         </p>
-        <img src="img/foto_perfil.jpg">
+        <img src="img/foto_perfil.jpg" class="img_home">
     </main>
 </div>
 
