terminei a pag de habilidades

--- a/semana3/portfolio/index.html
+++ b/semana3/portfolio/index.html
@@ -12,10 +12,10 @@
     <header>
         <p class="nome"> matheus de souza</p>
         <ul class="ul-home">
-            <li class="links"><a href="certificacoes.html">certificações</li></a>
+            <li class="links"><a href="certificacoes.html">certificados</li></a>
                 <li class="links"><a href="projetos.html">projetos</li></a>
-                    <li class="links"><a href="habilidades.html">habilidades</li></a>
-                        <li class="links"><a href="contato.html">contato</li></a>
+                    <li class="links"><a href="contato.html">contato</li></a>
+                        <li class="links"><a href="habilidades.html">habilidades</li></a>
         </ul>
     </header>
     <main class="home">
