--- a/revisao-react/labefy/labefy/public/index.html
+++ b/revisao-react/labefy/labefy/public/index.html
@@ -24,7 +24,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Labefy</title>
+    <style>
+      *{
+        margin:0px;
+        padding: 0px;
+        width: 100%;
+
+      }
+    </style>
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
