--- a/modulo02/case-star-wars/star-wars/public/index.html
+++ b/modulo02/case-star-wars/star-wars/public/index.html
@@ -24,6 +24,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <style>
+      html,
+      body,
+      #root{
+        margin:0px;
+        padding: 0px;
+        width: 100%;
+        min-height: 100vh;
+      }
+    </style>
     <title>React App</title>
   </head>
   <body>
