entrega com deploy

--- a/modulo3/case-goomer/goomer/public/index.html
+++ b/modulo3/case-goomer/goomer/public/index.html
@@ -26,8 +26,9 @@
     -->
     <title>Goomer</title>
     <style>
-     
-      *{
+      html,
+      body,
+      #root{
         margin:0px;
         padding: 0px;
         width: 100%;
